k8s/base/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vrs-app
  labels:
    app.kubernetes.io/name: visitor-registration-system
    app.kubernetes.io/component: application
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
