k8s/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vrs-app
  namespace: vrs-app
  labels:
    app.kubernetes.io/name: visitor-registration-system
    app.kubernetes.io/component: application
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: visitor-registration-system
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
